hphp/hack/test/typecheck/double_nullable_through_idx.php.like_types.exp
File "double_nullable_through_idx.php", line 12, characters 3-15:
  ?nothing
File "double_nullable_through_idx.php", line 11, characters 14-18:
Invalid argument (Typing[4110])
File "idx.hhi", line 32, characters 4-25:
Expected KeyedContainer<[unresolved], ?[unresolved]>
File "double_nullable_through_idx.php", line 5, characters 21-38:
But got dynamic because it is an unenforceable type
